infrastructure/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kuber-practice-app-postgres
spec:
  serviceName: kuber-practice-app-postgres-service
  replicas: 1
  selector:
    matchLabels:
      app: kuber-practice-app-postgres
  template:
    metadata:
      labels:
        app: kuber-practice-app-postgres
    spec:
      containers:
        - name: kuber-practice-app-postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: kuber-practice-app-postgres-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: kuber-practice-app-postgres-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
